--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "expo": "^50.0.0",
+    "expo-dev-client": "~3.3.9",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "^14.7.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-dev-client": "~3.3.9"
+    "expo-linear-gradient": "~12.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
