--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/drawer": "^6.6.9",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
@@ -22,6 +23,7 @@
     "expo-dev-client": "~3.3.9",
     "expo-font": "~11.10.3",
     "expo-image-picker": "^14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.11",
@@ -30,11 +32,11 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-linear-gradient": "~12.7.2"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
