--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-fbsdk-next": "^12.1.4",
+    "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
