--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "^50.0.13",
     "expo-checkbox": "~2.7.0",
     "expo-dev-client": "~3.3.11",
@@ -54,6 +55,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
