--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.3.1",
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "^50.0.13",
+    "expo-app-loading": "^2.1.1",
     "expo-checkbox": "~2.7.0",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
@@ -39,6 +40,7 @@
     "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-asset": "^2.1.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-fbsdk-next": "^12.1.4",
