--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.3",
+    "react-native-vector-icons": "^10.0.3",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
