--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "^50.0.13",
     "expo-app-loading": "^2.1.1",
@@ -38,16 +38,21 @@
     "expo-tracking-transparency": "~3.3.0",
     "expo-updates": "~0.24.12",
     "firebase": "^10.8.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-asset": "^2.1.1",
+    "react-native-calendar-picker": "^8.0.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-fbsdk-next": "^12.1.4",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-picker": "^0.0.16",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-notificated": "^0.1.4",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
