Updated Screens for Booking

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/auth": "^19.0.1",
     "@react-native-firebase/crashlytics": "^19.0.1",
@@ -22,6 +22,7 @@
     "@react-navigation/drawer": "^6.6.9",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
+    "@syncfusion/ej2-react-calendars": "^25.1.39",
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
     "deprecated-react-native-prop-types": "^2.2.0",
@@ -55,7 +56,7 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-notificated": "^0.1.4",
     "react-native-paper": "^5.12.3",
-    "react-native-picker-select": "^9.0.1",
+    "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
