--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-notificated": "^0.1.4",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
@@ -64,6 +65,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-vector-icons": "^10.0.3",
