--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.17",
     "expo-auth-session": "~5.4.0",
+    "expo-av": "~13.10.6",
     "expo-camera": "~14.1.3",
     "expo-checkbox": "~2.7.0",
     "expo-crypto": "~12.8.1",
@@ -93,12 +94,11 @@
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "13.6.4",
-    "react-navigation-stack": "^2.10.4",
-    "expo-av": "~13.10.6"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "metro-config": "^0.80.8"
+    "metro-config": "^0.80.9"
   },
   "resolutions": {
     "expo-linear-gradient": "~12.7.2"
