--- a/eas.json
+++ b/eas.json
@@ -10,12 +10,16 @@
     },
     "preview": {
       "channel": "preview",
+      "distribution": "internal",
       "android": {
         "buildType": "apk"
       }
     },
     "production": {
-      "channel": "production"
+      "channel": "production",
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
